# deltacert

./: .gitignore  LICENSE  README.md  SPEC.md  __init__.py  cli.py  collectors.py  deltacert-public.pem  deltacert-schema.json  deltacert.py  pyproject.toml  signing.py
examples/: example_certify.py
integrations/: cicd_hook.py  github_actions_example.yml  hf_integration.py  vllm_integration.py
scripts/: backfill_signatures.py
tests/: conftest.py  test_certify_safe.py  test_certify_system_trajectory.py  test_cli_free_running.py  test_cli_model_swap.py  test_freerun.py  test_harness.py  test_hf_integration.py  test_math_identity.py  test_signing.py  test_smoke.py
validation/: __init__.py  flagship_common.py  harness.py  pod_setup.sh
validation/batch_divergence/: run_flagship.py
validation/engine_swap/: assemble_result.py  run_flagship.sh
validation/kv_cache_quant/: cert_kv_fp8.json  result.json  run_flagship.py  run_trajectory_fp8.py
validation/provider_drift/: check.py  check_snapshot_vs_alias.py
validation/spec_decoding/: run_flagship.py
validation/trajectory/: run_flagship.py
validation/weight_quant/: humaneval_followup.py  run_flagship.py  run_gptq_gptqmodel.py
validation_results/: result_free_running_mistral_fp8_v4b.json
validation_results/batch_divergence/: cert_batch32.json  cert_batch64.json  cert_batch8.json  result_batch32.json  result_batch64.json  result_batch8.json
validation_results/engine_swap/: capture_A.npz  capture_B.npz  cert_engine_swap.json  result.json
validation_results/kv_cache_quant/: _base_acc.json  _quant_acc.json  (+2 more)
(+78 files in other folders)
